--- a/foce-child/sass/_nuages.scss
+++ b/foce-child/sass/_nuages.scss
@@ -1,10 +1,13 @@
 
-/*nuages*/
+/*nuages*/ 
 #place {
     position: relative;
-    background-image: url("foce-child/images_koukaki/Studio_Koukaki-image_place.png");
-  }
-  
+    background-image: url("images_koukaki/Studio_Koukaki-image_place.png");
+    height: 100%;
+    background-size: cover;
+
+  }    
+
   .gros {
     position: absolute;
     top: 0;
