--- a/foce-child/sass/_slider.scss
+++ b/foce-child/sass/_slider.scss
@@ -13,7 +13,11 @@
 .swiper-slide {
   height: 400px;
   img {
-    height: 100%;
-      width: 100%;
+    height: 350px;
+    width: 350px;   
+  }
+  figcaption {
+    display: block;
+    text-align: center;
   }
 }
